Update promo.html href

--- a/promo.html
+++ b/promo.html
@@ -15,10 +15,10 @@
           <div class="group">
             <div class="navbar">
               <ul>
-                <li class="text-wrapper-14"><a href="#">Beranda</a></li>
-                <li class="text-wrapper-14"><a href="#">Katalog</a></li>
-                <li class="text-wrapper-15"><a class="active" href="#">Promo</a></li>
-                <li class="text-wrapper-14"><a href="#">Tentang</a></li>
+                <li class="text-wrapper-14"><a href="beranda.html">Beranda</a></li>
+                <li class="text-wrapper-14"><a href="katalog.html">Katalog</a></li>
+                <li class="text-wrapper-15"><a class="active" href="promo.html">Promo</a></li>
+                <li class="text-wrapper-14"><a href="tentang.html">Tentang</a></li>
                 <li class="text-wrapper-14"><a href="#">Cari&nbsp;Produk</a></li>
               </ul>
             </div>
