--- a/tentang.html
+++ b/tentang.html
@@ -16,10 +16,10 @@
           <div class="group">
             <div class="navbar">
               <ul>
-                <li class="text-wrapper-14"><a href="#">Beranda</a></li>
-                <li class="text-wrapper-14"><a href="#">Katalog</a></li>
-                <li class="text-wrapper-14"><a href="#">Promo</a></li>
-                <li class="text-wrapper-15"><a class="active" href="#">Tentang</a></li>
+                <li class="text-wrapper-14"><a href="beranda.html">Beranda</a></li>
+                <li class="text-wrapper-14"><a href="katalog.html">Katalog</a></li>
+                <li class="text-wrapper-14"><a href="promo.html">Promo</a></li>
+                <li class="text-wrapper-15"><a class="active" href="tentang.html">Tentang</a></li>
                 <li class="text-wrapper-14"><a href="#">Cari&nbsp;Produk</a></li>
               </ul>
             </div>
