--- a/beranda.html
+++ b/beranda.html
@@ -11,7 +11,7 @@
       <div class="div">
         <div class="nav-bar">
           <div class="logo-2">
-            <div class="text-wrapper-12">🍟🧋Linda’s Snack Paradise</div>
+            <div class="logo-linda">🍟🧋Linda’s Snack Paradise</div>
           </div>
           <div class="group">
             <div class="navbar">
