fix folder file html css

--- a/beranda.html
+++ b/beranda.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="beranda_style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/beranda_style.css" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -16,10 +18,10 @@
           <div class="group">
             <div class="navbar">
               <ul>
-                <li class="text-wrapper-15"><a class="active" href="beranda.html">Beranda</a></li>
-                <li class="text-wrapper-14"><a href="katalog.html">Katalog</a></li>
-                <li class="text-wrapper-14"><a href="promo.html">Promo</a></li>
-                <li class="text-wrapper-14"><a href="tentang.html">Tentang</a></li>
+                <li class="text-wrapper-15"><a class="active" href="./beranda.html">Beranda</a></li>
+                <li class="text-wrapper-14"><a href="./katalog.html">Katalog</a></li>
+                <li class="text-wrapper-14"><a href="./promo.html">Promo</a></li>
+                <li class="text-wrapper-14"><a href="./tentang.html">Tentang</a></li>
                 <li class="text-wrapper-14"><a href="#">Cari&nbsp;Produk</a></li>
               </ul>
             </div>
