--- a/promo.html
+++ b/promo.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="promo_style.css" />
+    <link rel="stylesheet" href="./css/promo_style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -15,10 +15,10 @@
           <div class="group">
             <div class="navbar">
               <ul>
-                <li class="text-wrapper-14"><a href="beranda.html">Beranda</a></li>
-                <li class="text-wrapper-14"><a href="katalog.html">Katalog</a></li>
-                <li class="text-wrapper-15"><a class="active" href="promo.html">Promo</a></li>
-                <li class="text-wrapper-14"><a href="tentang.html">Tentang</a></li>
+                <li class="text-wrapper-14"><a href="./beranda.html">Beranda</a></li>
+                <li class="text-wrapper-14"><a href="./katalog.html">Katalog</a></li>
+                <li class="text-wrapper-15"><a class="active" href="./promo.html">Promo</a></li>
+                <li class="text-wrapper-14"><a href="./tentang.html">Tentang</a></li>
                 <li class="text-wrapper-14"><a href="#">Cari&nbsp;Produk</a></li>
               </ul>
             </div>
