revise beranda to index

--- a/tentang.html
+++ b/tentang.html
@@ -16,7 +16,7 @@
           <div class="group">
             <div class="navbar">
               <ul>
-                <li class="text-wrapper-14"><a href="./beranda.html">Beranda</a></li>
+                <li class="text-wrapper-14"><a href="./index.html">Beranda</a></li>
                 <li class="text-wrapper-14"><a href="./katalog.html">Katalog</a></li>
                 <li class="text-wrapper-14"><a href="./promo.html">Promo</a></li>
                 <li class="text-wrapper-15"><a class="active" href="./tentang.html">Tentang</a></li>
