--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="group">
             <div class="navbar">
               <ul>
-                <li class="text-wrapper-15"><a class="active" href="./beranda.html">Beranda</a></li>
+                <li class="text-wrapper-15"><a class="active" href="./index.html">Beranda</a></li>
                 <li class="text-wrapper-14"><a href="./katalog.html">Katalog</a></li>
                 <li class="text-wrapper-14"><a href="./promo.html">Promo</a></li>
                 <li class="text-wrapper-14"><a href="./tentang.html">Tentang</a></li>
