--- a/promo.html
+++ b/promo.html
@@ -15,7 +15,7 @@
           <div class="group">
             <div class="navbar">
               <ul>
-                <li class="text-wrapper-14"><a href="./beranda.html">Beranda</a></li>
+                <li class="text-wrapper-14"><a href="./index.html">Beranda</a></li>
                 <li class="text-wrapper-14"><a href="./katalog.html">Katalog</a></li>
                 <li class="text-wrapper-15"><a class="active" href="./promo.html">Promo</a></li>
                 <li class="text-wrapper-14"><a href="./tentang.html">Tentang</a></li>
