GET and DISPLAY data on beranda

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </div>
           <div class="mb-3">
             <label for="testimoni" class="text-wrapper-9">Testimoni Anda</label>
-            <textarea id="testimonial" name="testimonial" class="rectangle form-control" required></textarea>
+            <textarea id="testimonial" name="testimonial" class="rectangle form-control resizable" required></textarea>
           </div>
           <div class="mb-3">
             <button class="button1" type="button" onclick="submitTestimoni()">Kirim Testimoni</button>
@@ -195,9 +195,19 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div id="testimonials-container"></div>
+    <div class="row py-md-5 mb-5 position-relative background-container">
+      <div class="row mb-5">
+        <p class="text-wrapper-27 text-center mx-auto">Testimoni Pelanggan</p>
+      </div>
+      <div class="col-md-6 mb-md-0 mb-5 testimonials-section">
+        <div id="testimonials-container-left"></div>
+      </div>
+      <div class="col-md-6 mb-md-0 mb-5 testimonials-section">
+        <div id="testimonials-container-right"></div>
+      </div>
+    </div>
+  </div>
   <!-- Content -->
 
   <!-- Footer -->
