--- a/katalog.html
+++ b/katalog.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Katalog</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.discordapp.com/attachments/896935170333081613/1172190796208934942/Logo_Linda.png?ex=658454c0&is=6571dfc0&hm=03aa8f45dd994c868f8a8eb02503d3f4a84e79552e88fd2ebe28e489566af805&">
+  <title>Katalog | Linda’s Snack Paradise</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="./css/global.css" />
@@ -60,8 +61,8 @@
             src="https://cdn.discordapp.com/attachments/896935170333081613/1181609595936972842/Chitato.png?ex=6581aeb0&is=656f39b0&hm=50ee65f294558633da9d2fb534b7de02b0252f5f41e318a5093c4103e6095039&" />
           <p class="text-wrapper-24">Chitato Okonomiyaki</p>
           <p class="text-wrapper-25">
-            Chitato Okonomiyaki memberikan perpaduan renyahnya keripik kentang
-            dan saus Okonomiyaki yang kaya rasa.
+            Chitato Okonomiyaki memadukan gurihnya keripik kentang
+            dan saus ala Jepang.
           </p>
           <button class="button1" id="openModalBtn"
             onclick="openModal('Chitato Okonomiyaki', 'Chitato Okonomiyaki memberikan perpaduan renyahnya keripik kentang dan saus Okonomiyaki yang kaya rasa.', 'Rp20.000', 'Makanan Ringan')">
