--- a/tentang.html
+++ b/tentang.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tentang</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.discordapp.com/attachments/896935170333081613/1172190796208934942/Logo_Linda.png?ex=658454c0&is=6571dfc0&hm=03aa8f45dd994c868f8a8eb02503d3f4a84e79552e88fd2ebe28e489566af805&">
+  <title>Tentang | Linda’s Snack Paradise</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="./css/global.css" />
