Finishing the CSS and button

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-4 col d-flex justify-content-center">
-          <a class="button1" href="">Lihat Promo</a>
+          <a class="button1" href="./promo.html">Lihat Promo</a>
         </div>
       </div>
     </div>
