--- a/katalog.html
+++ b/katalog.html
@@ -108,14 +108,10 @@
       </div>
       <div class="row d-flex justify-content-center">
         <div class="col-md-3 d-flex justify-content-center">
-          <button class="button1" onclick="scrollToMinuman()">
-            Lihat Minuman
-          </button>
+          <a href="#katalog-minuman" onclick="scrollToMinuman()" class="button1">Lihat Minuman</a>
         </div>
         <div class="col-md-3 d-flex justify-content-center">
-          <button class="button1" onclick="scrollToMakananRingan()">
-            Lihat Makanan Ringan
-          </button>
+          <a href="#katalog-makanan" onclick="scrollToMakanan()" class="button1">Lihat Makanan</a>
         </div>
       </div>
     </div>
